/**
 * @author Dev Problems(A Sarang Kumar Tak)
 * @YoutubeChannel https://www.youtube.com/channel/UCVno4tMHEXietE3aUTodaZQ
 */
syntax = "proto3";

option java_multiple_files = true;

package fitnlu.ntpos.grpcproto;

message UserResponse {
    bool haveUser = 1;
    bool verified = 2;
}
message UserRequest {
    string userID = 1;
}

service UserService {
    rpc getUser(UserRequest) returns (UserResponse) {}
}

message ProductResponse {
    bool isSuccess = 1;
}
message ProductRequest {
    string productID = 1;
    double price = 2;
    int32 quantity = 3;
}
service ProductService {
    rpc updateQuantity(stream ProductRequest) returns (ProductResponse) {}
}